//
//  LogInUITests.swift
//  GymGram2UITests
//
//  Created by Kamel on 25.04.2023.
//

import XCTest

final class LogInUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testButton() throws {
        // UI tests must launch the application that they test.)

        let app = XCUIApplication()
        app.launch()

        let userName = app.textFields["Email"]
        userName.tap()
        userName.typeText("testuser@gmail.com")

        let password = app.secureTextFields["Password"]
        password.tap()
        password.typeText("Abcd1234")

        // Use XCTAssert and related functions to verify your tests produce the correct results.

        XCTAssertTrue(app.buttons["Login"].isEnabled, "The login button is not enabled")
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
